@@ -7689,17 +7689,29 @@ Ready.
 [ "geom",	"setSRID",	"command geom.setSRID(w:wkb, srid:int):wkb ",	"wkbSetSRID;",	"Sets the Reference System ID for this Geometry."	]
 [ "group",	"group",	"command group.group(b:bat[:any_1]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPgroup1;",	""	]
 [ "group",	"group",	"command group.group(b:bat[:any_1], s:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPgroup2;",	""	]
+[ "group",	"group",	"command group.group(b:bat[:any_1]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPgroup3;",	""	]
+[ "group",	"group",	"command group.group(b:bat[:any_1], s:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPgroup4;",	""	]
 [ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPgroup1;",	""	]
 [ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1], s:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPgroup2;",	""	]
+[ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPgroup3;",	""	]
+[ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1], s:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPgroup4;",	""	]
 [ "group",	"multicolumn",	"pattern group.multicolumn(b:bat[:any]...) (ref:bat[:oid], grp:bat[:oid], hist:bat[:any]) ",	"GROUPmulticolumngroup;",	"Derivation of a group index over multiple columns."	]
 [ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup2;",	""	]
 [ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], s:bat[:oid], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
 [ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup4;",	""	]
 [ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], s:bat[:oid], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup5;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup6;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], s:bat[:oid], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup7;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup8;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1], s:bat[:oid], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup9;",	""	]
 [ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup2;",	""	]
 [ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], s:bat[:oid], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
 [ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup4;",	""	]
 [ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], s:bat[:oid], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid], histo:bat[:lng]) ",	"GRPsubgroup5;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup6;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], s:bat[:oid], g:bat[:oid]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup7;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup8;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1], s:bat[:oid], g:bat[:oid], e:bat[:oid], h:bat[:lng]) (groups:bat[:oid], extents:bat[:oid]) ",	"GRPsubgroup9;",	""	]
 [ "identifier",	"#fromstr",	"command identifier.#fromstr():void ",	"IDfromString;",	"Convert a string to an identifier without any check"	]
 [ "identifier",	"#tostr",	"command identifier.#tostr():void ",	"IDtoString;",	"Convert identifier to string equivalent"	]
 [ "identifier",	"identifier",	"command identifier.identifier(s:str):identifier ",	"IDentifier;",	"Cast a string to an identifer "	]
